# darp

./: Cargo.toml  README.md
crates/darp-derive/: Cargo.toml
crates/darp-derive/src/: enums.rs  lib.rs  tuples.rs
crates/darp-derive/tests/: enum_tests.rs  mod.rs  tuple_tests.rs
roadmap/: 00-agent-definition-format.md  01-agent-runtime.md  02-agent-registry.md  03-agent-networking.md  04-agent-compose.md  05-agent-orchestration.md  06-developer-experience.md  README.md
src/: lib.rs
src/assert/: any.rs  array.rs  bool.rs  context.rs  error.rs  float.rs  int.rs  mod.rs  number.rs  string.rs
src/assert/rule/: equals.rs  fields.rs  items.rs  max.rs  min.rs  mod.rs  options.rs
src/path/: error.rs  ident.rs  mod.rs
src/reflect/: bool.rs  ext.rs  macros.rs  mod.rs  string.rs
src/reflect/num/: float.rs  int.rs  mod.rs  uint.rs
src/reflect/object/: arrays.rs  mod.rs  structs.rs  tuples.rs
src/schema/: any.rs  array.rs  bool.rs  context.rs  error.rs  float.rs  int.rs  mod.rs  number.rs  object.rs  phase.rs  string.rs
src/schema/rule/: fields.rs  items.rs  max.rs  min.rs  mod.rs  pattern.rs  required.rs
src/template/: mod.rs  scope.rs
src/template/diagnostic/: code.rs  label.rs  level.rs  mod.rs
src/template/lex/: buffer.rs  cursor.rs  error.rs  mod.rs
src/template/parse/: error.rs  lexer.rs  mod.rs  parser.rs
src/template/source/: location.rs  map.rs  mod.rs  span.rs
src/template/stream/: buffer.rs  cursor.rs  fork.rs  mod.rs  peek.rs
src/template/token/: group.rs  ident.rs  literal.rs  (+2 more)
src/value/: bool.rs  ext.rs  macros.rs  mod.rs  string.rs
(+57 files in other folders)
