[workspace]
resolver = "3"
members = [".", "crates/*"]
default-members = [".", "crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/darp"
homepage = "https://www.github.com/aacebo/darp"
repository = "https://www.github.com/aacebo/darp"

[package]
name = "darp"
version = "0.0.0"
edition = "2024"

[lib]
doctest = false

[lints.clippy]
collapsible-if = "allow"
new-ret-no-self = "allow"

[features]
default = []
derive = ["darp-derive"]
regex = ["dep:regex"]

[dependencies]
serde = { version = "1", features = ["default", "derive"] }
regex = { version = "1", optional = true }
darp-derive = { path = "./crates/darp-derive", optional = true }

[dev-dependencies]
serde_json = "1"
